<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.ChooseMovieFragment"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_label_choose"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/what_to_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:paddingTop="10dp"
        android:weightSum="4"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/movies_radio"
            android:checked="true"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie"
            />

        <RadioButton
            android:id="@+id/series_radio"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_series"
            />


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:gravity="center">

        <TextView
            android:id="@+id/textGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/genre"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textGenreItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/buttonAlertGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_genre"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textGenreItems2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/buttonAlertGenre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Исключить жанр"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <Spinner
            android:id="@+id/spinnerCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/country"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <Spinner
            android:id="@+id/spinnerYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleIndicator"
            android:numStars="10"
            android:rating="5"
            android:isIndicator="false"
            android:stepSize="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:gravity="center">

        <Button
            android:id="@+id/btn_show_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:textSize="20dp"/>


    </LinearLayout>

</LinearLayout>