<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="ru.lforb.mybooks.whattosee.UI.StartFragment"
        android:label="@string/what_to_see"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_chooseMovieFragment"
            app:destination="@id/chooseMovieFragment" />
    </fragment>
    <fragment
        android:id="@+id/chooseMovieFragment"
        android:name="ru.lforb.mybooks.whattosee.UI.ChooseMovieFragment"
        android:label="@string/what_to_choose"
        tools:layout="@layout/fragment_choose_movie" />
    <fragment
        android:id="@+id/randomMovieFragment"
        android:name="ru.lforb.mybooks.whattosee.UI.RandomMovieFragment"
        android:label="@string/random_movie"
        tools:layout="@layout/fragment_random_movie" >
        <action
            android:id="@+id/action_randomMovieFragment_to_startFragment"
            app:destination="@id/startFragment"
            app:launchSingleTop="false"
            app:popUpTo="@id/startFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="ru.lforb.mybooks.whattosee.UI.FavoritesFragment"
        android:label="@string/my_movie"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_favoritesFragment_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>
    <fragment
        android:id="@+id/favoritesMoviesFragment"
        android:name="ru.lforb.mybooks.whattosee.UI.FavoritesMoviesFragment"
        android:label="fragment_favorites_movies"
        tools:layout="@layout/fragment_favorites_movies" />
    <fragment
        android:id="@+id/favoritesTvFragment"
        android:name="ru.lforb.mybooks.whattosee.UI.FavoritesTvFragment"
        android:label="fragment_favorites_tv"
        tools:layout="@layout/fragment_favorites_tv" />
</navigation>